@@ -741,7 +741,7 @@ Mod-Gearman Worker: /opt/var/mod_gearman/mod_gearman_worker.log
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-05-27 11:40:05 CEST
+Last updated 2012-06-17 18:42:20 CEST
 </div>
 </div>
 </body>
