@@ -1723,6 +1723,23 @@ Default is yes.
 </div></div>
 </dd>
 <dt class="hdlist1">
+timeout_result
+</dt>
+<dd>
+<p>
+Defines the return code for timed out checks. Accepted return codes
+are 0 (Ok), 1 (Warning), 2 (Critical) and 3 (Unknown)
+Default: 2
+</p>
+<div class="exampleblock">
+<div class="exampleblock-content">
+<div class="literalblock">
+<div class="content">
+<pre><tt>timeout_result=2</tt></pre>
+</div></div>
+</div></div>
+</dd>
+<dt class="hdlist1">
 dup_results_are_passive
 </dt>
 <dd>
@@ -2340,7 +2357,7 @@ Make sure all your worker have the Nagios-Plugins available under
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-06-09 11:42:44 CEST
+Last updated 2012-06-18 16:49:22 CEST
 </div>
 </div>
 </body>
