@@ -136,6 +136,10 @@ fork_on_exec=no
 # Default: yes
 show_error_output=yes
 
+# timeout_result defines the return code for timed out checks. Accepted return
+# codes are 0 (Ok), 1 (Warning), 2 (Critical) and 3 (Unknown) Default: 2
+timeout_result=2
+
 # Use dup_results_are_passive to set if the duplicate result send to the dupserver
 # will be passive or active.
 # Default is yes (passive).
